# hello-rust

./: .env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  QUICK_SUMMARY.md  README  README.md  README_zh.md
.github/workflows/: mdbook.yml  mdbook2.yml  rust.yml
.specify/memory/: constitution.md
assets/: data.txt
crates/awesome/: AGENTS.md  Cargo.toml  build.rs
crates/awesome/src/: lib.rs  pest_sample.rs  tera_sample.rs
crates/awesome/src/data/: mod.rs  polars_sample.rs
crates/awesome/src/database/: mod.rs  sqlite_vec_sample.rs  surrealdb_sample.rs
crates/awesome/src/mq/: mod.rs  rumqtt_sample.rs
crates/awesome/src/rpcs/: mod.rs  tonic_hello_client.rs  tonic_hello_server.rs  tonic_store_client.rs  tonic_store_server.rs
crates/awesome/src/sequences/: mod.rs  uuid_sample.rs
crates/awesome/src/services/: concrete_injection_sample.rs  consul_client.rs  consul_client_sample.rs  consul_sample.rs  dependency_injection_concrete_sample.rs  dependency_injection_dynmaic_sample.rs  di_sample.rs  dynmaic_injection_arc_sample.rs  dynmaic_injection_box_sample.rs  greet_service.rs  greeter_client.rs  greeter_consume.rs  greeter_service.rs  hello_application.rs  inventory_sample.rs  mod.rs  service_container_sample.rs  service_locator_sample.rs  tonic_hello_client.rs  tonic_store_client.rs  tonic_store_server.rs
crates/awesome/src/services/framework/: config.rs  consul.rs  error.rs  lifecycle.rs  mod.rs  registry.rs  resgistry.rs
crates/awesome/src/templates/: liquid_sample.rs  mod.rs  tera_sample.rs
crates/awesome/templates/liquid/: data.tpl
crates/awesome/templates/pest/: grammar.pest
crates/awesome/templates/tera/: index.html
crates/leetcode/src/: lib.rs  solution_0002.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
data/: employees.csv  test.db
docs/: AUTO_PLAN_REVIEW_SUMMARY.md  CLARIFICATION_REPORT.md  COMPLETE_3_WEEK_PLAN_REPORT.md  CONTRIBUTING.md  COVERAGE_VERIFICATION.md  DOCUMENT_ANALYSIS.md  ERROR_FIX_REPORT.md  FR_IMPLEMENTATION_STATUS.md  GITHUB_ACTIONS_FIX.md  KNOWLEDGE_GAP_ANALYSIS.md  PHASE_1_2_COMPLETION_REPORT.md  QUALITY_AUDIT.md  QUALITY_RUBRICS.md  RUSTY_BOOK_COMPARISON.md  WAVE1_COMPLETION_REPORT.md  book.toml  getting-started.md  getting_started.md
docs/scripts/: chapter_template.md
docs/specs/001-rust-tutorial-docs/: ENGINEERING_REVIEW_QA.md  ENGINEERING_REVIEW_SUMMARY.md  plan.md  research.md  spec.md  tasks.md
docs/specs/001-rust-tutorial-docs/checklists/: bilingual.md  build.md  learning.md  requirements.md  technical.md  voice.md
docs/specs/002-interactive-examples/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
docs/specs/002-interactive-examples/checklists/: requirements.md
docs/specs/002-interactive-examples/contracts/: cli-schema.md
docs/src/: CHANGELOG.md  GITHUB_CODE_LINKS.md  QUALITY_AUDIT.md  README_CODE_EXAMPLES.md  README_CODE_MAPPINGS.md  RUST_TUTORIAL_CODE_GUIDE.md  SAMPLE_QUALITY.md  SUMMARY.md  _about-hello.md  about-hello.md  faq.md  getting-started.md  glossary.md  hello.html  introduction.md  learning_path.md  robots.txt  test-trigger.md  writing-principles.md
docs/src/advance/: advance-overview.md  advance.md  advanced-traits.md  async.md  atomic-types.md  axum.md  bytes.md  cow.md  csv.md  cyclerc.md  diesel.md  directory.md  dotenv.md  error-handling.md  futures.md  getset.md  hyper.md  includedir.md  iterators.md  json.md  macros.md  memmap.md  mio.md  mock.md  objectstore.md  ollama.md  process.md  review-advance.md  rkyv.md  rspec.md  serialization.md  smart-pointers.md  sqlx.md  tempfile.md  test.md  tokio.md  typealias.md
docs/src/advance/async/: async.md  cyclerc.md  futures.md  mio.md  rayon.md  tokio.md
docs/src/advance/data/: csv.md  data-overview.md  json.md  rkyv.md  serialization.md
docs/src/advance/database/: database.md  diesel.md  sqlx.md
docs/src/advance/error-handling/: error-handling.md
docs/src/advance/system/: bytes.md  cli.md  cow.md  directory.md  dotenv.md  includedir.md  memmap.md  process.md  (+6 more)
docs/src/algo/: algo.md
docs/src/awesome/: awesome-overview.md  awesome.md  case-studies.md  database.md  dependency_injection.md  message_queue.md  mq.md  mqtt.md  plugin.md  sequences.md  services.md  templates.md
docs/src/basic/: basic-overview.md  basic-ownership.md  basic.md  cfg_if.md  closure.md  datatype.md  enums.md  expression.md  functions.md  generic.md  glossary.md  lifetimes.md  logger.md  module.md  ownership.md  pointer.md  review-basic.md  struct-fields.md  struct-methods.md  struct.md  threads.md  tracing.md  trait-objects.md  trait.md  visiable.md
docs/src/leetcode/: leetcode.md
docs/src/projects/: README.md
docs/src/quick_reference/: snippets.md
docs/src/quiz/: index.md
docs/src/templates/: cross-references.md
docs/theme/: head.hbs  pagetoc.css
examples/todo/: Cargo.toml
examples/todo/src/: main.rs
examples/todo/tests/: cli_test.rs  common.rs
src/: awesome_bridge.rs  basic.rs  main.rs  my_mod.rs  my_visiable.rs
src/advance/: axum_sample.rs  bytes_sample.rs  cow_sample.rs  csv_sample.rs  cyclerc_sample.rs  diesel_sample.rs  dotenv_sample.rs  futures_sample.rs  getset_sample.rs  hyper_sample.rs  includedir_sample.rs  json_sample.rs  linkedlist.rs  macros_sample.rs  memmap_sample.rs  mio_sample.rs  mock_sample.rs  mod.rs  objectstore_sample.rs  ollama_sample.rs  process_sample.rs  rayon_sample.rs  rkyv_sample.rs  rspec_sample.rs  sqlx_sample.rs  sqlx_sqmple.rs  sysinfo_sample.rs  tempfile_sample.rs  tokio_sample.rs  typealias_sample.rs
src/advance/async/: cyclerc_sample.rs
src/advance/tools/: services_sample.rs
src/algo/: calc_pi_sample.rs  linked_list.rs  linkedlist.rs  mod.rs
src/basic/: cfg_if_sample.rs  closure_sample.rs  datatype_sample.rs  expression_sample.rs  generic_sample.rs  logger_sample.rs  mod.rs  module_sample.rs  my_mod.rs  ownership_sample.rs  pointer_sample.rs  rectangle.rs  threads_sample.rs  tracing_sample.rs  traits_sample.rs  visiable_sample.rs  yak_shave.rs
src/cli/: dispatcher.rs  docs_embed.rs  mod.rs  registry.rs
src/leetcode/: mod.rs  solution_0001.rs
(+21 files in other folders)
