[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

default-run="hello-rust"

[workspace]
members = ["crates/leetcode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.5.8",features=["derive"]}
env_logger = "0.11.1"
log = "0.4.20"
memmap2 = "0.9.4"
mmap-sync = "1.0.2"
page_size = "0.6.0"
rand = "0.8.5"
serde = {version="1.0.196",features = ["derive"]}
serde-transcode = "1.1.1"
serde_json = "1.0.113"
tempfile = "3.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# local crates
leetcode = {version="0.1.0",path="crates/leetcode"}

[workspace.dependencies]

