[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

default-run = "hello-rust"

[workspace]
members = ["crates/awesome", "crates/leetcode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.1"
log = "0.4.20"
memmap2 = "0.9.4"
mmap-sync = "1.0.2"
page_size = "0.6.0"
rand = { version = "0.8.5", features = ["default", "small_rng"] }
serde = { version = "1.0.196", features = ["derive"] }
serde-transcode = "1.1.1"
serde_json = "1.0.113"
tempfile = "3.10.0"
tracing = "0.1.40"
tracing-subscriber = {version ="0.3.18",features=["env-filter"]}

# local crates
leetcode = { version = "0.1.0", path = "crates/leetcode" }
awesome = { version = "0.1.0", path = "crates/awesome" }

futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
byteorder = "1.5.0"
bytes = "1.7.1"
bitvec = "1.0.1"
base64 = "0.22.1"
sqlx = { version = "0.8.2", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
    "runtime-tokio",
] }
bigdecimal = { version = "0.4.5", features = ["std", "serde-json"] }
num-bigint = { version = "0.4", features = ["rand"] }
ollama-rs = "0.2.1"
tera = "1.20.0"
chrono = { version = "0.4.39", features = ["serde"] }
include_dir = { version = "0.7.4", features = ["glob", "metadata"] }
dotenvy = "0.15.7"
home = "0.5.11"
diesel = { version = "2.2.6", features = [
    "sqlite",
    "time",
    "uuid",
    "numeric",
    "returning_clauses_for_sqlite_3_35",
] }
rkyv = { version = "0.8.10", features = ["std", "aligned", "arrayvec-0_7"] }
bytecheck = "0.8.0"
parking_lot = "0.12.3"
csv = "1.3.1"
anyhow = "1.0.95"
cfg-if = "1.0.0"
getset = "0.1.5"
derive_more = { version = "2.0.1", features = ["std", "full"] }
display = "0.1.2"
mio = { version = "1", features = ["net", "os-poll"] }
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.11", features = ["full"] }
axum = { version = "0.8.3", features = ["macros"] }
object_store = "0.12.0"
sysinfo = "0.34.2"
rayon = "1.10.0"
bumpalo = "3.17.0"
