[package]
name = "awesome"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
consul-rs = "0.1.14"
futures = "0.3.31"
liquid = "0.26.9"
pest = "2.7.15"
pest_derive = "2.7.15"
pest_generator = "2.7.15"
prost = "0.13.5"
rs-consul = "0.11.0"
rusqlite = {version="0.32.0",features=["bundled"]}
serde = {version="1.0.217" ,features = ["derive"]}
sqlite-vec = "0.1.6"
surrealdb = { version = "2.3.1", features = ["kv-mem"] }
tera = "1.20.0"
tokio = "1.45.0"
tokio-stream = "0.1.17"
tonic = "0.13.1"
tonic-reflection = "0.13.1"
uuid = { version = "1.16.0", features = ["v3", "v5","v7"] }
zerocopy = "0.8.25"

[build-dependencies]
tonic-build = "0.13.1"
